--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "1.0.0",
-    "@builder.io/qwik-city": "^1.0.0",
+    "@builder.io/qwik": "1.2.13",
+    "@builder.io/qwik-city": "1.2.13",
     "@builder.io/qwik-react": "0.5.0",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
@@ -50,8 +50,8 @@
     "react-dom": "18.2.0",
     "typescript": "5.0.4",
     "undici": "5.22.0",
-    "vite": "4.3.3",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "^0.30.1"
+    "vite": "4.4.11",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6"
   }
 }
